assingments/part3/exercise_304/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: shared-pv
          persistentVolumeClaim:
            claimName: sharefile-claim
      containers:
        - name: todo-app
          image: PROJECT/TODO_APP_IMAGE
          imagePullPolicy: Always
          volumeMounts:
          - name: shared-pv
            mountPath: /usr/src/app/files
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: PROJECT/TODO_BACKEND_IMAGE
          imagePullPolicy: Always
