assingments/part3/exercise_304/manifests/podfordebugging.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-busybox
  namespace: PROJECT/NAMESPACE
  labels:
    app: my-busybox
spec:
  containers:
  - image: busybox
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: busybox
  restartPolicy: Always
