assingments/part3/exercise_304/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
  namespace: PROJECT/NAMESPACE
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 2347
      protocol: TCP
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
  namespace: PROJECT/NAMESPACE
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - port: 2348
      protocol: TCP
      targetPort: 8001
