assingments/part3/exercise_304/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-material-ingress
  namespace: PROJECT/NAMESPACE
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-app-svc
            port: 
              number: 2347
      # - path: /todo-backend
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: todo-backend-svc
      #       port: 
      #         number: 2348
